--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.0",
     "husky": "^4.2.5",
     "husky-tslint-pre-commit": "^1.0.3",
     "prettier": "^2.0.5",
