--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
+    "typeface-open-sans": "^0.0.75",
+    "typeface-roboto-slab": "^1.1.4",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -60,8 +62,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && pretty-quick --staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "node node_modules/husky-tslint-pre-commit/pre-commit.js"
     }
   }
 }
