--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "typeface-open-sans": "^0.0.75",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-transition-group": "^4.2.4",
     "@types/styled-components": "^5.1.0",
     "husky": "^4.2.5",
     "husky-tslint-pre-commit": "^1.0.3",
